[gd_scene load_steps=15 format=3 uid="uid://dgv3t75kjw5yk"]

[ext_resource type="Script" uid="uid://c6iq74gry3ose" path="res://game_manager.gd" id="1_ahbqi"]
[ext_resource type="Script" uid="uid://8hbu8iqnexwx" path="res://scenes/AudioManager.gd" id="2_4asn1"]
[ext_resource type="Script" uid="uid://bxui5m7okhj67" path="res://chunk_grid.gd" id="2_7gix3"]
[ext_resource type="PackedScene" uid="uid://jtuklciefesc" path="res://scenes/fungi_standard.tscn" id="3_4asn1"]
[ext_resource type="PackedScene" uid="uid://fxahqc1b14vo" path="res://scenes/ant.tscn" id="4_dw7u0"]
[ext_resource type="PackedScene" uid="uid://c2fqptx3corit" path="res://scenes/akira.tscn" id="6_dw7u0"]
[ext_resource type="Script" uid="uid://c3krbeni8owbe" path="res://camera_2d.gd" id="6_kpk0m"]
[ext_resource type="FontFile" uid="uid://cqdm5bdcptq2o" path="res://fonts/KiwiSoda.ttf" id="7_7gix3"]
[ext_resource type="Script" uid="uid://bmawfas0ctme5" path="res://scenes/akira.gd" id="7_dw7u0"]
[ext_resource type="Script" uid="uid://dbdqwobf4e0sn" path="res://control.gd" id="7_qs1vn"]
[ext_resource type="Texture2D" uid="uid://c5cocgvdvggmm" path="res://sprites/anthill.png" id="9_4asn1"]
[ext_resource type="Script" uid="uid://c70wxh3uhqvdc" path="res://scenes/Ash.gd" id="9_kpk0m"]
[ext_resource type="Texture2D" uid="uid://bvt56vkdlbsiy" path="res://sprites/grass.png" id="10_dw7u0"]

[sub_resource type="LabelSettings" id="LabelSettings_lnbra"]
font = ExtResource("7_7gix3")
font_size = 24
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.98039216)

[node name="TestLevel" type="Node2D"]

[node name="ChunkGrid" type="Node2D" parent="."]
script = ExtResource("2_7gix3")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_ahbqi")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_qs1vn")

[node name="MoneyLabel" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
label_settings = SubResource("LabelSettings_lnbra")

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("2_4asn1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -178.0
offset_top = -35.0
offset_right = 966.0
offset_bottom = 2256.0
color = Color(0.22254363, 0.13286173, 0.016408615, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = -191.0
offset_top = -345.0
offset_right = 1003.0
offset_bottom = 128.0
color = Color(0.029592056, 0.06631192, 0.085900255, 1)

[node name="Akira" parent="." instance=ExtResource("6_dw7u0")]
position = Vector2(986, 85)
script = ExtResource("7_dw7u0")

[node name="Ant" parent="." instance=ExtResource("4_dw7u0")]
position = Vector2(987.17554, 110.34473)

[node name="Ash" type="Node2D" parent="."]
script = ExtResource("9_kpk0m")

[node name="FungiStandard" parent="." instance=ExtResource("3_4asn1")]
position = Vector2(-385, 57)
scale = Vector2(0.1, 0.1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(411, 385)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
script = ExtResource("6_kpk0m")

[node name="Anthill" type="Sprite2D" parent="."]
visible = false
position = Vector2(419.00003, 95)
scale = Vector2(0.14375001, 0.1200608)
texture = ExtResource("9_4asn1")

[node name="Grass" type="Sprite2D" parent="."]
visible = false
position = Vector2(394, 163)
scale = Vector2(0.22725, 0.40699998)
texture = ExtResource("10_dw7u0")
